feat: product filter

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -98,3 +98,19 @@ body {
     color: var(--color-text-default);
   }
 }
+
+@layer utilities {
+  @keyframes fadeIn {
+    from {
+      opacity: 0;
+      transform: scale(0.98);
+    }
+    to {
+      opacity: 1;
+      transform: scale(1);
+    }
+  }
+  .animate-fadeIn {
+    animation: fadeIn 0.12s ease-out;
+  }
+}
